--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img class="redcat" src="images\redcat.png" width="50">
-    <img class="greencat" src="images\greencat.png" width="50">
-    <img class="bluecat" src="images\bluecat.png" width="50">
+    <img class="redcat" src="redcat.png" width="50">
+    <img class="greencat" src="greencat.png" width="50">
+    <img class="bluecat" src="bluecat.png" width="50">
     <p class="meow"> "meow meow meow"</p>
     <h1 class="title">Hello fellow user!</h1>
     <p class="welcome">Welcome to the underground!</p>
