--- a/indexbr.html
+++ b/indexbr.html
@@ -12,9 +12,9 @@
     <img class="bluecat" src="bluecat.png" width="50">
     <p class="meow"> "miau miau miau"</p>
     <h1 class="title">Oi usuário!</h1>
-    <p class="welcome">Bemvindo as profundezas dos meus projetos!</p>
+    <p class="welcome">Bem vindo as profundezas dos meus projetos!</p>
     <p class="disclaimer">Eu vou usar esse site pra postar meus jogos de navegador aqui.</p>
 
-    
+    <a class="translate" href="devec0.github.io/ec0sgames/index.html">Change to English</a>
 </body>
 </html>
