--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <p class="welcome">Welcome to the underground!</p>
     <p class="disclaimer">I will publish my games here so you can play my online browser games whenever you're connected to the internet.</p>
 
-    <a class="translate" href="devec0.github.io/ec0sgames/indexbr.html">Mude para Português Brasileiro</a>
+    <a class="translate" href="https://devec0.github.io/ec0sgames/indexbr.html">Mude para Português Brasileiro</a>
 </body>
 </html>
